[workspace]
members = [
    "nylon-wall-common",
    "nylon-wall-daemon",
    "nylon-wall-ui",
    # "nylon-wall-ebpf",  # Requires: cargo build --target bpfel-unknown-none -Z build-std=core
]
exclude = [
    "nylon-wall-ebpf",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
