[package]
name = "nylon-wall-common"
version = "0.1.0"
edition = "2024"

[features]
default = ["std"]
std = ["serde", "serde_json"]
aya-pod = ["aya"]

[dependencies]
serde = { version = "1", default-features = false, features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
aya = { version = "0.13", optional = true }
