[package]
name = "nylon-wall-common"
version.workspace = true
edition.workspace = true

[features]
default = ["std"]
std = ["serde", "serde_json"]
aya-pod = ["aya"]

[dependencies]
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
aya = { workspace = true, optional = true }
