[package]
name = "nylon-wall-daemon"
version = "0.1.0"
edition = "2024"

[dependencies]
nylon-wall-common = { path = "../nylon-wall-common", features = ["std"] }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8", features = ["ws"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
slatedb = "0.3"
object_store = "0.11"
tower-http = { version = "0.6", features = ["cors"] }
toml = "0.8"
thiserror = "2"
anyhow = "1"
bytes = "1"
chrono = "0.4"
futures-util = "0.3"

[target.'cfg(target_os = "linux")'.dependencies]
aya = "0.13"
aya-log = "0.2"
