[package]
name = "nylon-wall-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
nylon-wall-common = { workspace = true, features = ["std"] }
tokio.workspace = true
axum.workspace = true
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
slatedb.workspace = true
object_store.workspace = true
tower-http.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
bytes.workspace = true
chrono.workspace = true
futures-util.workspace = true
dhcproto.workspace = true
rand.workspace = true
bcrypt.workspace = true
jsonwebtoken.workspace = true
ring.workspace = true

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tempfile = "3"
tokio-tungstenite = "0.26"

[target.'cfg(target_os = "linux")'.dependencies]
socket2.workspace = true
nylon-wall-common = { workspace = true, features = ["aya-pod"] }
aya.workspace = true
aya-log.workspace = true
libc = "0.2"
