[package]
name = "nylon-wall-ui"
version = "0.1.0"
edition = "2024"

[dependencies]
dioxus = { version = "0.7" }
nylon-wall-common = { path = "../nylon-wall-common", features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
gloo-net = { version = "0.6", features = ["http"] }
tracing = "0.1"

[features]
default = ["web"]
web = ["dioxus/web", "dioxus/router"]
desktop = ["dioxus/desktop"]
