[package]
name = "nylon-wall-ui"
version.workspace = true
edition.workspace = true

[dependencies]
dioxus.workspace = true
dioxus-free-icons.workspace = true
nylon-wall-common = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["std"] }
serde_json.workspace = true
gloo-net.workspace = true
gloo-timers.workspace = true
chrono.workspace = true
tracing.workspace = true
wasm-bindgen = "0.2"
futures-util.workspace = true

[features]
default = ["web"]
web = ["dioxus/web", "dioxus/router"]
desktop = ["dioxus/desktop", "dioxus/router"]
